Remoe TitleLabel from books, remove grid from EOC, index, fix v-spacing in toc, fix icon size  in IconNote

--- a/styles/designs/carnival/parts/_eoc-components.scss
+++ b/styles/designs/carnival/parts/_eoc-components.scss
@@ -103,42 +103,42 @@ $SectionSummaryUnorderedList:(
     _name: "UnorderedSectionSummaryList",
     _subselector: " .section-summary > ul",
     _properties: (
-    margin-left: h-grid(3),
+    margin-left: h-spacing(3),
   )
 );
 $SectionSummaryOrderedList:(
     _name: "OrderedSectionSummaryList",
     _subselector: " .section-summary > ol",
     _properties: (
-    margin-left: h-grid(3),
+    margin-left: h-spacing(3),
   )
 );
 $SummaryUnorderedList:(
     _name: "UnorderedSummaryList",
     _subselector: " .summary > ul",
     _properties: (
-    margin-left: h-grid(3),
+    margin-left: h-spacing(3),
   )
 );
 $SummaryOrderedList:(
     _name: "OrderedSummaryList",
     _subselector: " .summary > ol",
     _properties: (
-    margin-left: h-grid(3),
+    margin-left: h-spacing(3),
   )
 );
 $SummarySectionUnorderedList:(
     _name: "SummarySectionUnorderedList",
     _subselector: " section > ul",
     _properties: (
-    margin-left: h-grid(3),
+    margin-left: h-spacing(3),
   )
 );
 $SummaryNestedUnorderedList:(
     _name: "UnorderedNestedList",
     _subselector: " > li > ul",
     _properties: (
-    margin-left: h-grid(2),
+    margin-left: h-spacing(2),
   )
 );
 
