--- a/styles/designs/carnival/parts/_index-components.scss
+++ b/styles/designs/carnival/parts/_index-components.scss
@@ -3,7 +3,7 @@ $IndexContainerComponent: (
   _subselector: '',
   _properties: (
     column-count: 3,
-    column-gap: h-grid(4),
+    column-gap: h-spacing(4),
   )
 );
 
@@ -68,7 +68,7 @@ $IndexTermComponent: (
     font-family: enum('ValueSet:::REQUIRED'),
     font-size: font-scale(1),
     line-height: line-height(1),
-    padding-right: h-grid(1),
+    padding-right: h-spacing(1),
   )
 );
 
