--- a/styles/designs/carnival/parts/_toc-components.scss
+++ b/styles/designs/carnival/parts/_toc-components.scss
@@ -206,7 +206,6 @@ $TocTopLevelList: (
     list-style: none,
     padding-left: 0,
     margin-left: 0,
-    margin-right: 2in
   )
 );
 
@@ -266,8 +265,8 @@ $TocUnitLink: (
     text-transform: uppercase,
     letter-spacing: 0.1rem,
     text-decoration: none,
-    padding-bottom: half-v-spacing(1),
-    margin-bottom: half-v-spacing(1)
+    padding-bottom: v-spacing(2),
+    margin-bottom: v-spacing(2)
   )
 );
 
