--- a/styles/templates/template1/parts/_exercises-settings.scss
+++ b/styles/templates/template1/parts/_exercises-settings.scss
@@ -2,20 +2,20 @@
     PracticeProblemsExercises:(
         _selectors: ('.practice-problems [data-type="exercise"]'),
         ProblemDivider: (
-            margin-right: h-grid(1)
+            margin-right: h-spacing(1)
         ),
         SolutionTitle: (
             font-family: (_ref: "typography:::sansFont"),
         ),
         ExerciseOrderedList: (
-            margin-left: h-grid(4),
+            margin-left: h-spacing(4),
             margin-bottom: column-v-spacing(1),
         ),
     ),
     CheckUnderstandingExercises:(
         _selectors: ('.check-understanding [data-type="exercise"]'),
         ProblemDivider: (
-            margin-right: h-grid(1)
+            margin-right: h-spacing(1)
         ),
         SolutionTitle: (
             font-family: (_ref: "typography:::sansFont"),
